--- a/assets/less/controls.less
+++ b/assets/less/controls.less
@@ -19,10 +19,14 @@
     }
 }
 
+select,
+input {
+    padding: 4px;
+}
+
 input[type=number] {
     width: 3em;
     text-align: right;
-    padding: 4px;
 
     background: transparent;
     border: 0px;
@@ -30,6 +34,11 @@ input[type=number] {
     padding-right: 0.50em;
 }
 
+table input {
+    background: white !important;
+}
+
+select:focus,
 button:focus,
 input:focus {
     outline: none;
@@ -39,10 +48,12 @@ input:focus {
     box-shadow: 0px 0px 0px @size @color;
 }
 
+select:hover,
 input:hover {
     .boxShadowBorder(4px; fade(@focusColor, 40%));
 }
 
+select:focus,
 input:focus {
     .boxShadowBorder(4px; fade(@focusColor, 80%));
 }
