--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -81,7 +81,7 @@ table {
 .skills {
     td {
         &.untrained {
-            border-widh: 2px !important;
+            border-width: 1px;
             // border: 2px solid transparent;
             background-color: @untrainedColor;
             // border-radius: 2px;
